# mcp-server-poc-projects

./: .gitignore  README.md
single-server-agents/: main-1.py  main.py  pyproject.toml  requirements.txt  show_tree.py
single-server-agents/agents/products/: agent_utils.py  product_agent-1.py  product_agent.py  product_agent_1.py  product_agent_module-1.py  product_agent_module-2.py  product_agent_module.py  product_agent_module_1.py  product_agent_module_2.py  products_mcp_stdio_server-1.py  products_mcp_stdio_server.py
single-server-agents/agents/products/tools/: test_product_tools.py
single-server-agents/agents/weather/: weather_agent_module.py
single-server-agents/langgraph/: mission_controller-1.py  mission_controller-2.py  mission_controller.py
single-server-agents/scripts/: run_products_server.ps1
single-server-agents/sh/: start_product_mcp_server.sh
ss-agents/: main.py  pyproject-org.toml  pyproject.toml
ss-agents/agents/products/: product_agent.py  product_agent_module-1.py  product_agent_module.py  products_mcp_stdio_server.py
ss-agents/agents/products/tools/: product_tools.py
ss-agents/agents/weather/: weather_agent_module.py
ss-agents/langgraph/: mission_controller-1.py  mission_controller.py
